# baxter_sandbox

./: README.md
baxter_demo_ui/: package.xml  setup.py
baxter_demo_ui/scripts/: .demo_ui.py.swp  demo_ui.py
baxter_demo_ui/share/: config.json  config.json~
baxter_demo_ui/src/baxter_demo_ui/: __init__.py  demo_buttons.py  demo_windows.py  exit_codes.py  img_proc.py
baxter_demo_ui/src/brr_ui/: brr_buttons.py  brr_windows.py  exit_codes.py  img_proc.py
brr_ui/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
brr_ui/scripts/: launch_ui.py  new_ui.py
brr_ui/share/: .config.json.swp  config.json
brr_ui/src/brr_ui/: .Windows.py.swp  Buttons.py  MassLib.py  Windows.py  __init__.py  brr_procs.py  exit_codes.py  img_proc.py  rostopic_handler.py
connect_four/: CMakeLists.txt  package.xml  setup.py
connect_four/config/: left_poses.config  right_poses.config
connect_four/scripts/: connect_ai.py  connect_game.py  connect_vision.py
connect_four/src/connect_four/: __init__.py  minimax.py  pick_place.py  vision.py
connect_four/stl/: baxterFeeder.stl
